--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+
     <title>Portfolio</title>
   </head>
   <body>
     <header>
       <div class="header">
         <ul>
-          <li>HOME</li>
+          <li><a href="/profile.html">HOME</a></li>
           <li>PROJECT</li>
           <li>GALLERY</li>
-          <li>BLOG</li>
+          <li><a href="/blog.html">BLOG</a></li>
         </ul>
       </div>
     </header>
